peasants button color changing

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -55,7 +55,7 @@
         <h3 class="section__h3 section__h3--units">Peasants</h3>
         <img class="section__image section__image--units" src="../assets/img/peasant.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--peasant">0</span></p>
-        <button class="section__button section__button--peasant">Buy</button>
+        <button class="section__button section__button--units section__button--peasant">Buy</button>
         <p class="section__paragraph">Price: <span class="price--peasant">10</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">
           Peasants are main money source in your empire, they provide food and
@@ -69,7 +69,7 @@
         <p class="section__paragraph">
           Quantity: <span class="counter--merceneary">0</span>
         </p>
-        <button class="section__button section__button--merceneary">
+        <button class="section__button section__button--units section__button--merceneary">
           Buy
         </button>
         <p class="section__paragraph price price--merceneary">
@@ -85,7 +85,7 @@
         <h3 class="section__h3 section__h3--units">Priests</h3>
         <img class="section__image section__image--units" src="../assets/img/priest.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--priest">0</span></p>
-        <button class="section__button section__button--priest">Buy</button>
+        <button class="section__button section__button--units section__button--priest">Buy</button>
         <p class="section__paragraph price price--priest">Price: 100 Gold</p>
         <p class="section__paragraph section__paragraph--description">
           Priest are very respected in your empire, they earn a lot of gold
@@ -97,7 +97,7 @@
         <h3 class="section__h3 section__h3--units">Knights</h3>
         <img class="section__image section__image--units" src="../assets/img/knight.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--knight">0</span></p>
-        <button class="section__button section__button--knight">Buy</button>
+        <button class="section__button section__button--units section__button--knight">Buy</button>
         <p class="section__paragraph price price--knight">Price: 300 Gold</p>
         <p class="section__paragraph section__paragraph--description">
           Knights are expensive, powerful warriors, they are excellent in
@@ -110,7 +110,7 @@
         <h3 class="section__h3 section__h3--units">Paladins</h3>
         <img class="section__image section__image--units" src="../assets/img/paladin.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--paladin">0</span></p>
-        <button class="section__button section__button--paladin">Buy</button>
+        <button class="section__button section__button--units section__button--paladin">Buy</button>
         <p class="section__paragraph price price--paladin">Price: 1000 Gold</p>
         <p class="section__paragraph section__paragraph--description">Those holy warriors rend through your enemies with
           the power of god on their swords, they are most respected units in your empires, so people are most likely to
@@ -122,7 +122,7 @@
         <h3 class="section__h3 section__h3--units">Dragons</h3>
         <img class="section__image section__image--units" src="../assets/img/dragon.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--dragon">0</span></p>
-        <button class="section__button section__button--dragon">Buy</button>
+        <button class="section__button section__button--units section__button--dragon">Buy</button>
         <p class="section__paragraph price price--paladin">Price: 3000 Gold</p>
         <p class="section__paragraph section__paragraph--description">Dragons are the greatest blessing from your God
           Imperator, they outclass every single unit in battle, also they will share their knowledge and treasures with
