all units logic&mechanic (city upgrade to fix)

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -74,8 +74,8 @@
         <button class="section__button section__button--buy section__button--merceneary">
           Buy
         </button>
-        <p class="section__paragraph price price--merceneary">
-          Price: 100 Gold
+        <p class="section__paragraph">
+          Price:  <span class="price--merceneary">100</span> Gold
         </p>
         <p class="section__paragraph section__paragraph--description">
           Mercenearies are expensive units with high military power, but they
@@ -88,7 +88,7 @@
         <img class="section__image section__image--units" src="../assets/img/priest.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--priest">0</span></p>
         <button class="section__button section__button--buy section__button--priest">Buy</button>
-        <p class="section__paragraph price price--priest">Price: 100 Gold</p>
+        <p class="section__paragraph">Price: <span class="price--priest">100</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">
           Priest are very respected in your empire, they earn a lot of gold
           from people donations on church, but they are not that relevant in
@@ -100,7 +100,7 @@
         <img class="section__image section__image--units" src="../assets/img/knight.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--knight">0</span></p>
         <button class="section__button section__button--buy section__button--knight">Buy</button>
-        <p class="section__paragraph price price--knight">Price: 300 Gold</p>
+        <p class="section__paragraph">Price: <span class="price--knight">300</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">
           Knights are expensive, powerful warriors, they are excellent in
           battle and offer some of their payment for your empire as well as
@@ -113,7 +113,7 @@
         <img class="section__image section__image--units" src="../assets/img/paladin.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--paladin">0</span></p>
         <button class="section__button section__button--buy section__button--paladin">Buy</button>
-        <p class="section__paragraph price price--paladin">Price: 1000 Gold</p>
+        <p class="section__paragraph">Price:  <span class="price--paladin">1000</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">Those holy warriors rend through your enemies with
           the power of god on their swords, they are most respected units in your empires, so people are most likely to
           pay for their holy crusade.
@@ -125,7 +125,7 @@
         <img class="section__image section__image--units" src="../assets/img/dragon.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--dragon">0</span></p>
         <button class="section__button section__button--buy section__button--dragon">Buy</button>
-        <p class="section__paragraph price price--paladin">Price: 3000 Gold</p>
+        <p class="section__paragraph">Price:  <span class="price--dragons">3000</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">Dragons are the greatest blessing from your God
           Imperator, they outclass every single unit in battle, also they will share their knowledge and treasures with
           anyone that worships them <span class="section__paragraph section__paragraph--special">Gold per second: 40</br>  Military Power: 100 </br>Your priest are battle priests now. They earn +1 military power for each dragon</span></p>
