images animations (besides city)

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,10 +26,11 @@
     </header>
     <section class="section section--clicker">
       <h2 class="section__h2">Gold Generator</h2>
-      <button class="section__button section__button--clicker">
-        Click!
-      </button>
       <div class="section__coin section__coin--js">
+        <img src="../assets/img/coin.png" class="section__coin-image" />
+        <button class="section__button section__button--clicker">
+          Click!
+        </button>
       </div>
       <p class="section__paragraph counter counter--gold">0</p>
       <h3 class="section__h3">Gold</h3>
@@ -55,7 +56,7 @@
       <div class="section__container section__container--article">
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Peasants</h3>
-        <img class="section__image section__image--units" src="../assets/img/peasant.svg" alt="" />
+        <img class="section__image section__image--units peasants__image" src="../assets/img/peasant.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--peasant">0</span></p>
         <button class="section__button section__button--buy section__button--peasant">Buy</button>
         <p class="section__paragraph">Price: <span class="price--peasant">10</span> Gold</p>
@@ -67,7 +68,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Mercenearies</h3>
-        <img class="section__image section__image--units" src="../assets/img/mercenary.svg" alt="" />
+        <img class="section__image section__image--units mercenearies__image" src="../assets/img/mercenary.svg" alt="" />
         <p class="section__paragraph">
           Quantity: <span class="counter--merceneary">0</span>
         </p>
@@ -85,7 +86,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Priests</h3>
-        <img class="section__image section__image--units" src="../assets/img/priest.svg" alt="" />
+        <img class="section__image section__image--units priests__image" src="../assets/img/priest.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--priest">0</span></p>
         <button class="section__button section__button--buy section__button--priest">Buy</button>
         <p class="section__paragraph">Price: <span class="price--priest">100</span> Gold</p>
@@ -97,7 +98,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Knights</h3>
-        <img class="section__image section__image--units" src="../assets/img/knight.svg" alt="" />
+        <img class="section__image section__image--units knights__image" src="../assets/img/knight.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--knight">0</span></p>
         <button class="section__button section__button--buy section__button--knight">Buy</button>
         <p class="section__paragraph">Price: <span class="price--knight">300</span> Gold</p>
@@ -110,7 +111,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Paladins</h3>
-        <img class="section__image section__image--units" src="../assets/img/paladin.svg" alt="" />
+        <img class="section__image section__image--units paladins__image" src="../assets/img/paladin.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--paladin">0</span></p>
         <button class="section__button section__button--buy section__button--paladin">Buy</button>
         <p class="section__paragraph">Price:  <span class="price--paladin">1000</span> Gold</p>
@@ -122,7 +123,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Dragons</h3>
-        <img class="section__image section__image--units" src="../assets/img/dragon.svg" alt="" />
+        <img class="section__image section__image--units dragons__image" src="../assets/img/dragon.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="counter--dragon">0</span></p>
         <button class="section__button section__button--buy section__button--dragon">Buy</button>
         <p class="section__paragraph">Price:  <span class="price--dragons">3000</span> Gold</p>
