--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -39,14 +39,14 @@
     <section class="section section--city">
       <h2 class="section__h2 section__h2--city">Your City</h2>
       <div class="section__container section__container--image">
-     
+        
     </div>
       <div class="section__container section__container--city">
         <h3 class="section__h3">Your Military Power</h3>
         <p class="section__paragraph counter--power">0</p>
-        <button class="section__button section__button--buy section__button--city lv1"> Upgrade City to Lv. 2
+        <button class="section__button section__button--buy section__button--city lv1"><span class="section__content section__content--js city--lv1"></span>
         </button>
-        <p class="section__paragraph section__paragraph--city">
+        <p class="section__paragraph section__paragraph--lv1 section__paragraph--city">
           Required: </br><span class="price--city"></span> Gold <span class="power--city"></span> Military Power
         </p>
       </div>
