--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -108,7 +108,7 @@
           Knights are expensive, powerful warriors, they are excellent in
           battle and offer some of their payment for your empire as well as
           the treasures earned during wars.<span class="section__paragraph section__paragraph--special">Gold per second: 5 </br> Military Power:
-            25 </br> There is a small chance for extra 100 gold every 10 seconds</span> 
+            25 </br> Every knight grants a small chance for extra 30 gold every 5 seconds</span> 
         </p>
       </article>
       <article class="section__article">
@@ -120,7 +120,7 @@
         <p class="section__paragraph section__paragraph--description">Those holy warriors rend through your enemies with
           the power of god on their swords, they are most respected units in your empires, so people are most likely to
           pay for their holy crusade.
-          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +1 gold per second for each 2 paladins you have </span>
+          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +2 gold per second for each 5 paladins you have </span>
         </p>
       </article>
       <article class="section__article">
@@ -131,7 +131,7 @@
         <p class="section__paragraph">Price:  <span class="section__price price--dragons">3000</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">Dragons are the greatest blessing from your God
           Imperator, they outclass every single unit in battle, also they will share their knowledge and treasures with
-          anyone that worships them <span class="section__paragraph section__paragraph--special">Gold per second: 40</br>  Military Power: 100 </br>Your priest are battle priests now. They earn +1 military power for each dragon</span></p>
+          anyone that worships them <span class="section__paragraph section__paragraph--special">Gold per second: 40</br>  Military Power: 100 </br>Your priest are battle priests now. They earn +2 military power for each dragon</span></p>
       </article>
       </div>
     </section>
