--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,7 +65,7 @@
         <p class="section__paragraph section__paragraph--description">
           Peasants are main money source in your empire, they provide food and
           utilities for your army, but altough their high gold income they are
-          really weak fighters. <span class="section__paragraph section__paragraph--special">Gold per second: 1 Military Power: 1</span>
+          really weak fighters. <span class="section__paragraph section__paragraph--special">Gold per second: <span class="peasants--upgrade">2</span> Military Power: 1</span>
         </p>
       </article>
       <article class="section__article">
@@ -120,7 +120,7 @@
         <p class="section__paragraph section__paragraph--description">Those holy warriors rend through your enemies with
           the power of god on their swords, they are most respected units in your empires, so people are most likely to
           pay for their holy crusade.
-          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +2 gold per second for each 5 paladins you have </span>
+          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +1 gold per second for each paladin you have </span>
         </p>
       </article>
       <article class="section__article">
