--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -58,7 +58,7 @@
       <div class="section__container section__container--article">
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Peasants</h3>
-        <img class="section__image section__image--units peasants__image" src="../assets/img/peasant.svg" alt="" />
+        <img class="section__image section__image--units section__image--peasants" src="../assets/img/peasant.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="section__price counter--peasant">0</span></p>
         <button class="section__button section__button--buy section__button--peasant">Buy</button>
         <p class="section__paragraph">Price: <span class="section__price price--peasant">10</span> Gold</p>
@@ -70,7 +70,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Mercenearies</h3>
-        <img class="section__image section__image--units mercenearies__image" src="../assets/img/mercenary.svg" alt="" />
+        <img class="section__image section__image--units section__image--mercenearies" src="../assets/img/mercenary.svg" alt="" />
         <p class="section__paragraph">
           Quantity: <span class="section__price counter--merceneary">0</span>
         </p>
@@ -78,7 +78,7 @@
           Buy
         </button>
         <p class="section__paragraph">
-          Price:  <span class="section__price price--merceneary">100</span> Gold
+          Price:  <span class="section__price price--merceneary">80</span> Gold
         </p>
         <p class="section__paragraph section__paragraph--description">
           Mercenearies are expensive units with high military power, but they
@@ -87,20 +87,20 @@
         </p>
       </article>
       <article class="section__article">
-        <h3 class="section__h3 section__h3--units">Priests</h3>
-        <img class="section__image section__image--units priests__image" src="../assets/img/priest.svg" alt="" />
+        <h3 class="section__h3 section__h3--units priests--js">Priests</h3>
+        <img class="section__image section__image--units section__image--priests" src="../assets/img/priest.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="section__price counter--priest">0</span></p>
         <button class="section__button section__button--buy section__button--priest">Buy</button>
         <p class="section__paragraph">Price: <span class="section__price price--priest">100</span> Gold</p>
-        <p class="section__paragraph section__paragraph--description">
+        <p class="section__paragraph section__paragraph--description section__paragraph--priests">
           Priest are very respected in your empire, they earn a lot of gold
           from people donations on church, but they are not that relevant in
-          the times of war.<span class="section__paragraph section__paragraph--special">Gold per second: 10 Military Power: 2</span> 
+          the times of war.<span class="section__paragraph section__paragraph--special">Gold per second: 10 Military Power: <span class="priests--upgrade"></span></span> 
         </p>
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Knights</h3>
-        <img class="section__image section__image--units knights__image" src="../assets/img/knight.svg" alt="" />
+        <img class="section__image section__image--units section__image--knights" src="../assets/img/knight.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="section__price counter--knight">0</span></p>
         <button class="section__button section__button--buy section__button--knight">Buy</button>
         <p class="section__paragraph">Price: <span class="section__price price--knight">300</span> Gold</p>
@@ -113,7 +113,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Paladins</h3>
-        <img class="section__image section__image--units paladins__image" src="../assets/img/paladin.svg" alt="" />
+        <img class="section__image section__image--units section__image--paladins" src="../assets/img/paladin.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="section__price counter--paladin">0</span></p>
         <button class="section__button section__button--buy section__button--paladin">Buy</button>
         <p class="section__paragraph">Price:  <span class="section__price price--paladin">1000</span> Gold</p>
@@ -125,7 +125,7 @@
       </article>
       <article class="section__article">
         <h3 class="section__h3 section__h3--units">Dragons</h3>
-        <img class="section__image section__image--units dragons__image" src="../assets/img/dragon.svg" alt="" />
+        <img class="section__image section__image--units section__image--dragons" src="../assets/img/dragon.svg" alt="" />
         <p class="section__paragraph">Quantity: <span class="section__price counter--dragon">0</span></p>
         <button class="section__button section__button--buy section__button--dragon">Buy</button>
         <p class="section__paragraph">Price:  <span class="section__price price--dragons">3000</span> Gold</p>
