--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,7 +65,7 @@
         <p class="section__paragraph section__paragraph--description">
           Peasants are main money source in your empire, they provide food and
           utilities for your army, but altough their high gold income they are
-          really weak fighters. <span class="section__paragraph section__paragraph--special">Gold per second: <span class="peasants--upgrade">2</span> Military Power: 1</span>
+          really weak fighters. <p class="section__paragraph section__paragraph--special">Gold per second: <span class="peasants--upgrade">2</span> Military Power: 1</p>
         </p>
       </article>
       <article class="section__article">
@@ -82,7 +82,7 @@
         </p>
         <p class="section__paragraph section__paragraph--description">
           Mercenearies are expensive units with high military power, but they
-          earn much less gold on their journeys than you spend to hire them.<span class="section__paragraph section__paragraph--special"> Gold per second: 2 Military Power: 10</span>
+          earn much less gold on their journeys than you spend to hire them.<p class="section__paragraph section__paragraph--special"> Gold per second: 2 Military Power: 10</p>
          
         </p>
       </article>
@@ -92,10 +92,10 @@
         <p class="section__paragraph">Quantity: <span class="section__price counter--priest">0</span></p>
         <button class="section__button section__button--buy section__button--priest">Buy</button>
         <p class="section__paragraph">Price: <span class="section__price price--priest">100</span> Gold</p>
-        <p class="section__paragraph section__paragraph--description section__paragraph--priests">
-          Priest are very respected in your empire, they earn a lot of gold
-          from people donations on church, but they are not that relevant in
-          the times of war.<span class="section__paragraph section__paragraph--special">Gold per second: 10 Military Power: <span class="priests--upgrade"></span></span> 
+        <p class="section__paragraph section__paragraph--description">
+          <span class= "priests--description">Priest are very respected in your empire, they earn a lot of gold
+            from people donations on church, but they are not that relevant in
+            the times of war.</span><p class="section__paragraph section__paragraph--special">Gold per second: 10 Military Power: <span class="priests--upgrade"></span></p> 
         </p>
       </article>
       <article class="section__article">
@@ -107,8 +107,8 @@
         <p class="section__paragraph section__paragraph--description">
           Knights are expensive, powerful warriors, they are excellent in
           battle and offer some of their payment for your empire as well as
-          the treasures earned during wars.<span class="section__paragraph section__paragraph--special">Gold per second: 5 </br> Military Power:
-            25 </br> Every knight grants a small chance for extra 30 gold every 5 seconds</span> 
+          the treasures earned during wars.<p class="section__paragraph section__paragraph--special">Gold per second: 5 </br> Military Power:
+            25 </br> Every knight grants a small chance </br>for extra 30 gold every 5 seconds</p> 
         </p>
       </article>
       <article class="section__article">
@@ -120,7 +120,7 @@
         <p class="section__paragraph section__paragraph--description">Those holy warriors rend through your enemies with
           the power of god on their swords, they are most respected units in your empires, so people are most likely to
           pay for their holy crusade.
-          <span class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +1 gold per second for each paladin you have </span>
+          <p class="section__paragraph section__paragraph--special"> Gold per second: 25 </br> Military Power: 30 </br> Your peasants earn +1 gold per </br>second for each paladin you have </p>
         </p>
       </article>
       <article class="section__article">
@@ -131,37 +131,29 @@
         <p class="section__paragraph">Price:  <span class="section__price price--dragons">3000</span> Gold</p>
         <p class="section__paragraph section__paragraph--description">Dragons are the greatest blessing from your God
           Imperator, they outclass every single unit in battle, also they will share their knowledge and treasures with
-          anyone that worships them <span class="section__paragraph section__paragraph--special">Gold per second: 40</br>  Military Power: 100 </br>Your priest are battle priests now. They earn +2 military power for each dragon</span></p>
+          anyone that worships them <p class="section__paragraph section__paragraph--special">Gold per second: 40</br>  Military Power: 100 </br>Your priest are battle priests now.</br> They earn +2 military power for each dragon</p></p>
       </article>
       </div>
     </section>
     <section class="section section--upgrades">
       <h2 class="section__h2">Upgrades</h2>
       <div class="section__container section__container--upgrades">
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
-        <div class="section__tile"></div>
+        <div class="section__tile"><img src="../assets/img/upgradeAll1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeAll2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeClicker1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeClicker2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradePeasants1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradePeasants2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeMercenearies1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeMercenearies2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradePriest1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradePriest2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeKnights1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeKnights2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradePaladins1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradePaladins2.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeDragons1.svg" class="section__image section__image--upgrades" alt=""/></div>
+        <div class="section__tile"><img src="../assets/img/upgradeDragons2.svg" class="section__image section__image--upgrades" alt=""/></div>
       </div>
       <article>
         <h3 class="section__h3 section__h3--upgrades">lorem</h3>
